--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -16,15 +16,19 @@
 
 
 
-      <div class="stage col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3">
+      <div class="stage col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2">
         <h1>Welcome to the Kappa Karousel</h1>
       </div>
 
-      <div class="control col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3">
+      <div class="control col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2">
         <button class="previous btn btn-primary col-md-2 col-sm-2">Previous</button>
 
         <div class="index col-md-8 col-sm-8">
-
+          <div class="progress">
+            <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="0">
+              <span class="sr-only"></span>
+            </div>
+          </div>
         </div>
 
         <button class="next btn btn-primary col-md-2 col-sm-2">Next</button>
