--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -17,7 +17,7 @@
 
 
       <div class="stage col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2">
-        <h1>Welcome to the Kappa Karousel</h1>
+        <h1>Welcome to the Kappa Karousel!</h1>
       </div>
 
       <div class="control col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2">
